--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,5 @@ sonar.sourceEncoding=UTF-8
 
 sonar.host.url=http://localhost:9000
 sonar.token=sqa_f6ac04fe0036cab7333ed62381220db536267695
+# Incluir reporte ESLint
+sonar.externalIssuesReportPaths=eslint-sonar-report.json
